--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="#" class="logo">Travel</a>
+		<a href="#" class="logo">NBNB TRAVELS</a>
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
@@ -89,7 +89,7 @@
 			<div class="box">
 				<div class="thum">
 					<img src="img/img1.png">
-					<h3>$499</h3>
+					<h3>Ra.67,499</h3>
 				</div>
 
 				<div class="dest-content">
@@ -110,7 +110,7 @@
 			<div class="box">
 				<div class="thum">
 					<img src="img/img2.png">
-					<h3>$499</h3>
+					<h3>Rs.24,499</h3>
 				</div>
 
 				<div class="dest-content">
@@ -131,7 +131,7 @@
 			<div class="box">
 				<div class="thum">
 					<img src="img/img3.png">
-					<h3>$499</h3>
+					<h3>Rs.37,499</h3>
 				</div>
 
 				<div class="dest-content">
@@ -167,20 +167,20 @@
 
 			<div class="col-content">
 				<img src="img/img-2.jpg">
-				<h5>Machu Picchu</h5>
-				<p>PERU</p>
+				<h5>NYU</h5>
+				<p>New-York</p>
 			</div>
 
 			<div class="col-content">
 				<img src="img/img-3.jpg">
-				<h5>Machu Picchu</h5>
-				<p>PERU</p>
+				<h5>Singapore</h5>
+				<p>Home State University</p>
 			</div>
 
 			<div class="col-content">
 				<img src="img/img-4.jpg">
-				<h5>Machu Picchu</h5>
-				<p>PERU</p>
+				<h5>Europe</h5>
+				<p>Germany</p>
 			</div>
 
 			<div class="col-content">
@@ -191,8 +191,8 @@
 
 			<div class="col-content">
 				<img src="img/img-6.jpg">
-				<h5>Machu Picchu</h5>
-				<p>PERU</p>
+				<h5>Belarus</h5>
+				<p>Eastern Europe</p>
 			</div>
 
 		</div>
@@ -229,10 +229,10 @@
 					<h4>Contact Info</h4>
 					<ul>
 						<li><a href="#">Pune</a></li>
-						<li><a href="#">Kharadi</a></li>
+						<li><a href="#">Kharadi, Near West-In</a></li>
 						<li><a href="#">+91- 7499949066</a></li>
-						<li><a href="#">info@mydomain.com</a></li>
-						<li><a href="#">+1(123)-456-7890</a></li>
+						<li><a href="#">atharvaaghasing1277@gmail.com</a></li>
+						<li><a href="#"></a>Made-with-❤</a></li>
 					</ul>
 				</div>
 
@@ -249,7 +249,7 @@
 		</div>
 
 		<div class="end-text">
-			<p>Copyright ©2022 All rights reserved | Made by Atharvaa Ghasing & group</p>
+			<p>Made by Atharvaa Ghasing & group</p>
 		</div>
 	</section>
 
