--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 		</div>
 
 		<div class="end-text">
-			<p>Made by Atharvaa Ghasing & group</p>
+			<p>Made by Siddhant Rakibe</p>
 		</div>
 	</section>
 
