updated `medhavin` info

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 						<li><a href="#">Pune</a></li>
 						<li><a href="#">Kharadi, Near West-In</a></li>
 						<li><a href="#">+91- 7499949066</a></li>
-						<li><a href="#">atharvaaghasing1277@gmail.com</a></li>
+						<li><a href="#">medhavin.vidya@gmail.com</a></li>
 						<li><a href="#"></a>Made-with-❤</a></li>
 					</ul>
 				</div>
@@ -249,12 +249,10 @@
 		</div>
 
 		<div class="end-text">
-			<p>Made by Siddhant Rakibe</p>
+			<p>Made by Medhavin Sharma</p>
 		</div>
 	</section>
 
-	<!--link to js--->
-	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
