updated `nosa` agency

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="#" class="logo">NBNB TRAVELS</a>
+		<a href="#" class="logo">NOSA AGENCY</a>
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
